[Web] Fix scroll not working on small screens
https://github.com/necolas/react-native-web/issues/1299

--- a/packages/web/src/index.css
+++ b/packages/web/src/index.css
@@ -43,6 +43,6 @@ input:focus {
 }
 
 /* https://github.com/necolas/react-native-web/issues/1299 */
-div[class*='scrollSnapAlign'] > div {
+.pagingEnabledFix > div > div > div {
   height: 100%;
 }
